# jppractice

./: Cargo.toml  README.md
resources/: words.json
src/: main.rs
