[package]
name = "jppractice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
rand = "0.8.5"
chrono = "0.4.31"
colored = "2.0.4"
ansi_term="0.12.1"
tokio = {version="1.32.0",features=["full"]}
